--- a/extention/pages/popup.html
+++ b/extention/pages/popup.html
@@ -3,17 +3,24 @@
 <head>
     <title>Why Get This - Popup</title>
     <link rel="stylesheet" type="text/css" href="../styles/popup.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="container">
+        <h1>Why Get This</h1>
         <button id="myData">My Data</button>
         <div class="switch">
             <input type="checkbox" id="toggleSwitch">
-            <label for="toggleSwitch" class="slider"></label>
+            <label for="toggleSwitch" class="slider">
+                <span class="on">ON</span>
+                <span class="off">OFF</span>
+            </label>
         </div>
     </div>
     <script src="../scripts/popup.js"></script>
 </body>
 </html>
+
+
 
 
